# maxwell

./: LICENSE.txt  README.md  actions.py  pyproject.toml  requirements.txt  sed.py  setup.py
.circleci/: config.yml
maxwell/: __init__.py  actions.py  sed.py  train.py  util.py
maxwell/tests/: __init__.py  test_sed.py
maxwell_align/: sed.py  train.py
maxwell_align/tests/: test_sed.py
sed_align/: sed.py  train.py
tests/: test_sed.py
