[build-system]
requires = ["setuptools >= 65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["maxwell*"]

[project]
name = "maxwell"
version = "0.2.4"
description = "Stochastic Edit Distance aligner for string transduction"
readme = "README.md"
requires-python = "> 3.9"
license = { text = "Apache 2.0" }
authors = [
    {name = "Simon Clematide"},
    {name = "Peter Makarov"},
    {name = "Travis Bartley"},
]
keywords = [
    "computational linguistics",
    "morphology",
    "natural language processing",
    "language",
]
dependencies = [
    "numpy >= 1.20.1",
    "tqdm >= 4.64.1",
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Linguistic",
]


[project.scripts]
maxwell-train = "maxwell.train:main"

[project.urls]
homepage = "https://github.com/CUNY-CL/maxwell"
